--- a/app/src/main/res/layout/score_fragment.xml
+++ b/app/src/main/res/layout/score_fragment.xml
@@ -73,7 +73,7 @@
             android:layout_marginBottom="32dp"
             android:text="@string/play_again"
             android:theme="@style/GoButton"
-            android:onClick="@{() -> scoreViewModel.onPlayAgain()"
+            android:onClick="@{() -> scoreViewModel.onPlayAgain()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
